Testing\selftest\Changes.txt

2007-03-26 Gal
 Fix and addition to line coloring tests
  StringDifferencing: DiffColoring.cpp DiffColoring.h

2007-03-21 Gal
 Fix TestCase1::Difference2 test.
  StringDifferencing: TestCase1.cpp

 Add more test case to stringdiff (line coloring feature).
  StringDifferencing: StringDifferencing.dsp
  StringDifferencing new files: DiffColoring.cpp DiffColoring.h

2006-11-22 Kimmo
 Add more case difference tests to stringdiffs
  StringDifferencing: StringDifferencing.dsp
  StringDifferencing new files: CasesDiffByte.cpp CasesDiffByte.h

2006-11-21 Kimmo
 Fix string differencing cases, add few new cases
  StringDifferencing: DifferentStrings1.cpp DifferentStrings1.h StringDifferencing.cpp
   TestCase1.cpp

2006-11-20 Kimmo
 Add unit tests for projectfiles
  Add folder: CppUnit/ProjectFile and its contents
 Few fixes to the tests (need to create the project file for every test)
  CppUnit/ProjectFile: LeftAndRight.cpp LeftAndRightNonRecursive.cpp LeftAndRightRecursive.cpp
   PathsAndFilter.cpp ProjectFile.dsp ProjectFileTesting.cpp SimpleLeft.cpp SimpleRight.cpp
   StdAfx.h
  CppUnit/ProjectFile/TestData: LeftAndRightNonRecursive.WinMerge
   LeftAndRightRecursive.WinMerge

2006-10-31 Kimmo
 Cleanup example test, add more simple string compare tests
  StringDifferencing: StringDifferencing.dsp TestCase1.cpp TestCase1.h
  StringDifferencing: add files DifferentStrings1.cpp DifferentStrings1.h
   IdenticalStrings1.cpp IdenticalStrings1.h

2006-10-27 Kimmo
 PATCH: [ 1585418 ] CppUnit tests for StringDiff
  Add folder Testing/CppUnit for unit tests
  Add folder CppUnit/StringDifferencing and its contents

